ISIS-2892: css: fixes select2 z-index
- select2 would not properly render on modal dialogs

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides-all-v2.css
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides-all-v2.css
@@ -1005,6 +1005,10 @@ footer .footer-image {
     margin-right: 10px;
 }
 
+.select2-container {
+	z-index: 1060; /* as bootstrap modal dialogs appear to have 1055 */
+}
+
 .select2-container-multi.input-sm {
     height: inherit;
 }
